# a2a-proof

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  mutation.yml  release.yml
docs/: ap2.md  assertions.md  contracts.md  lifecycle.md  operations.md  push-notifications.md  showcases.md
examples/: official-helloworld.yaml  official-multitenancy-reverse.yaml  official-rust-lifecycle.yaml  turul-interrupting.yaml
examples/ap2/: payment-mandate.txt  payment-receipt.txt  payment-root.jwk  processor.jwk
schema/: a2a-proof.schema.json
scripts/: generate_schema.py
src/a2a_proof/: a2a.py  ap2.py  assertions.py  cli.py  config.py  demo.py  diffing.py  evidence.py  files.py  models.py  protocol.py  push.py  reporting.py  runner.py
tests/: test_a2a.py  test_ap2.py  test_ap2_official.py  test_assertions.py  test_cli.py  test_config.py  test_demo.py  test_diffing.py  test_e2e.py  test_evidence.py  test_files.py  test_push.py  test_reporting.py  test_runner.py  test_schema.py
tests/action/: a2a-proof.yaml  server.py
