[project]
name = "a2a-proof"
version = "0.2.0"
description = "Black-box contract tests for A2A agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Alexey Larionov" }]
keywords = ["a2a", "agent2agent", "agents", "contract-testing", "testing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [
  "a2a-sdk[grpc]>=1.1.1,<2",
  "click>=8.4.2,<9",
  "httpx>=0.28.1,<1",
  "pydantic>=2.13.4,<3",
  "pyyaml>=6.0.3,<7",
  "regex>=2026.7.19,<2027",
  "rich>=15,<16",
]

[project.scripts]
a2a-proof = "a2a_proof.cli:main"

[project.urls]
Changelog = "https://github.com/aspix2k/a2a-proof/blob/main/CHANGELOG.md"
Documentation = "https://github.com/aspix2k/a2a-proof#readme"
Homepage = "https://github.com/aspix2k/a2a-proof"
Issues = "https://github.com/aspix2k/a2a-proof/issues"
Repository = "https://github.com/aspix2k/a2a-proof"

[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest>=9.1.1,<10",
  "pytest-asyncio>=1.4,<2",
  "pytest-cov>=7.1,<8",
  "respx>=0.23.1,<1",
  "ruff>=0.15.22,<0.16",
  "twine>=6.2,<7",
  "ty>=0.0.61,<0.1",
  "mutmut>=3.6,<4",
  "zizmor==1.27.0",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["a2a_proof"]

[tool.coverage.report]
fail_under = 99
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["A", "ASYNC", "B", "C4", "E", "F", "I", "N", "PERF", "PIE", "PL", "PT", "RUF", "SIM", "UP", "W"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.11"

[tool.mutmut]
only_mutate = [
  "src/a2a_proof/assertions.py",
  "src/a2a_proof/config.py",
  "src/a2a_proof/models.py",
  "src/a2a_proof/protocol.py",
  "src/a2a_proof/runner.py",
]
pytest_add_cli_args_test_selection = [
  "tests/",
  "--ignore",
  "tests/test_e2e.py",
  "-k",
  "not test_session_reports_timeout",
]
mutate_only_covered_lines = true
